Add manual volume handler: format/mount/umount
